# many-light-denoising

./: .gitignore  CMakeLists.txt  README.md
include/: bvh.h  camera.h  config.h  core.h  engine.h  film.h  geometry.h  light.h  ray.h  sampling.h  scene.h  shading.h  window.h
src/: bvh.cpp  camera.cpp  core.cpp  engine.cpp  film.cpp  geometry.cpp  main.cpp  ray.cpp  sampling.cpp  scene.cpp  shading.cpp  window.cpp
tests/: aabb_tests.cpp  bvh_tests.cpp  camera_tests.cpp  colour_tests.cpp  film_tests.cpp  frame_tests.cpp  matrix_tests.cpp  placeholder.cpp  ray_tests.cpp  sampling_tests.cpp  scene_tests.cpp  spherical_tests.cpp  triangle_tests.cpp  vec3_tests.cpp  vec3_utils_tests.cpp
